fix: remove margins on mobile screen (#108)

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -33,7 +33,7 @@ dd {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   /* scroll-behavior: smooth; */
   text-rendering: optimizeSpeed;
   line-height: 1.5;
